<resources>
    <string name="app_name">Infertility</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="first_timer_signup">First Timer? Signup!</string>
    <string name="dont_tell_anyone_about_us_keeping_your_fitness_journey_private_is_key">Don\'t tell anyone about us! Keeping your fitness journey private is key!</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="please_read">Please Read</string>
    <string name="login_signup">Login/Signup</string>
    <string name="hello">Hello!</string>
    <string name="please_confirm_your">Please confirm your</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="enter_your_email">Enter your email…</string>
    <string name="_6_digit_code">6 digit-code</string>
    <string name="enter_the_code_we_sent_to_504_968_4139">Enter the code we sent to (504) 968–4139</string>
    <string name="resend">Resend</string>
    <string name="code_is_expired_in_4_74s">Code is expired in 4:74s</string>
    <string name="submit">Submit</string>
    <string name="what_s_your_phone_number">What\'s your phone number?</string>
    <string name="_91_phone_number">+91-Phone Number</string>
    <string name="by_tapping_next_you_re_creating_an_account_and_you_agree_to_the_account_terms_and_acknowledge_privacy_policy">By tapping next you\'re creating an account and you agree to the Account terms and acknowledge Privacy Policy.</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="back_button">Back Button</string>
    <string name="please_confirm_your_email_and_create_strong_password">Please confirm your email and create strong password!</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter your password...</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter confirm password...</string>
    <string name="create_account">Create Account</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="name">Name</string>
    <string name="what_should_aavie_call_you">What should Aavie call you?</string>
    <string name="example_email_com">example@email.com</string>
    <string name="birthday">Birthday</string>
    <string name="save_changes">Save Changes</string>
    <string name="some_text">some text</string>
    <string name="user_icon">user icon</string>
    <string name="phone">Phone</string>
    <string name="password_bullets">*********</string>
    <string name="_27">27</string>
    <string name="apr">Apr</string>
    <string name="_2025">2025</string>
    <string name="user_profile_image">user profile image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="skip">Skip</string>
    <string name="profile_completion">Profile Completion:</string>
    <string name="_10">10%</string>
    <string name="setup_your_body_shape">Setup your body shape</string>
    <string name="select_which_mostly_relates_you">Select which mostly relates you!</string>
    <string name="select_your_face_structure">Select your face structure</string>
    <string name="about_me">About me</string>
    <string name="my_details">My details</string>
    <string name="occupation">Occupation</string>
    <string name="student">Student</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="education">Education</string>
    <string name="ug">UG</string>
    <string name="blood_group">Blood Group</string>
    <string name="a">A+</string>
    <string name="more_details_about_you">more details about you!</string>
    <string name="it_s_all_secret_between_us">(It\'s all secret between us!)</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="drinking">Drinking</string>
    <string name="smoking">Smoking</string>
    <string name="food_habit">Food Habit</string>
    <string name="save">Save</string>
    <string name="lutel">Lutel</string>
    <string name="ovulation">Ovulation</string>
    <string name="folicular">Folicular</string>
    <string name="menstruation">Menstruation</string>
    <string name="how_to_manage_your_body_based_on_your_cycle">How to manage your body based on your cycle!</string>
    <string name="search">search</string>
    <string name="track_period">Track Period</string>
    <string name="body_type">Body Type</string>
    <string name="your_health">Your Health</string>
    <string name="track_activity">Track Activity</string>
    <string name="your_vibe">Your Vibe</string>
    <string name="your_bodytype_is_your_vibe_nit_define_nhow_you_feel_nhow_you_behave_nhow_you_like_things">Your bodytype is your vibe! \nIt define \nHow you feel! \nHow you behave! \nHow you like things!</string>
    <string name="your_bodytype_is_your_vibe_nyour_born_with_neverybody_is_different_nvata_body_pitta_body_kapha_body_nand_many_more">Your bodytype is your vibe!\nYour born with\nEverybody is different,\nVata body, Pitta body, Kapha body\nand many more</string>
    <string name="your_period_and_hormones">YOUR PERIOD and HORMONES</string>
    <string name="_1_2_3_4_5">1 2 3 4 5</string>
    <string name="_6_7_8_9_10_11_12_13_14">6 7 8 9 10 11 12 13 14</string>
    <string name="_15_16_17_18_19_20_21_22">15 16 17 18 19 20 21 22</string>
    <string name="_23_24_25_26_27_28">23 24 25 26 27 28</string>
    <string name="low_energy">Low energy</string>
    <string name="walking_yoga">walking, yoga</string>
    <string name="strength_training_ncardio">Strength training,\nCardio</string>
    <string name="energy_rise_nhigh_motivation">Energy rise,\nhigh motivation</string>
    <string name="moduler_energy">Moduler energy</string>
    <string name="strength_training_nrecovert">strength training\nrecovert</string>
    <string name="low_intensity_workout_nyoga_walking">low intensity workout\nyoga, walking</string>
    <string name="fatigue_bloating_nlower_motivation">fatigue, bloating\nlower motivation</string>
    <string name="subscribe_for_nrecommendations_on_diets_nsuppliments_what_suits_you_nunderstanding_your_cycle_ndetailed_analysis_on_your_food_and_excercise">Subscribe for\nRecommendations on diets,\nSuppliments (what suits you!)\nUnderstanding your cycle,\ndetailed analysis on your food and excercise</string>
    <string name="know_your_bodytype_vibe">KNOW YOUR BODYTYPE (VIBE)!</string>
    <string name="vata">Vata</string>
    <string name="_25">25%</string>
    <string name="pitta">Pitta</string>
    <string name="_40">40%</string>
    <string name="kapha">Kapha</string>
    <string name="_35">35%</string>
    <string name="vibing_70">vibing @70%</string>
    <string name="whats_your_genetics_n_your_body_type">Whats your genetics\n(Your body type)</string>
    <string name="check_your_prakriti_bodytype">Check your Prakriti(Bodytype)</string>
    <string name="is_your_body_vibing_right_n_current_dosha">Is your body vibing right?\n(Current Dosha)</string>
    <string name="vata_pitta_kapha">vata    pitta    kapha</string>
    <string name="check_your_vikriti_current_vibe">Check your vikriti (current vibe)</string>
    <string name="know_about_your_period">Know about your period!</string>
    <string name="self_access">Self-Access</string>
    <string name="human_body_is_designed_to_live_in_ease_any_discomfort_in_your_period_might_be_a_small_reason_of_doshas_imbalance">Human body is designed to live in-ease, any discomfort in your period might be a small reason of Doshas imbalance!</string>
    <string name="are_you_having_healthy_period">Are you having healthy period?</string>
    <string name="search_icon">search icon</string>
    <string name="notification_bell_icon">notification bell icon</string>
    <string name="upward_arrow_icon">upward arrow icon</string>
    <string name="downward_arrow_icon">downward arrow icon</string>
    <string name="downward_progress_bar">downward progress bar</string>
    <string name="healthy_living_for_better_period_tips">Healthy living for better period: Tips</string>
    <string name="plant_based_diet">Plant-Based Diet</string>
    <string name="learn_the_benefits_of_a_plant_based_diet_for_longevity">Learn the benefits of a plant-based diet for longevity.</string>
    <string name="_7_min_read">7 min read</string>
    <string name="read_more">Read More</string>
    <string name="mindfulness_tips">Mindfulness Tips</string>
    <string name="personalized_supplements">Personalized Supplements</string>
    <string name="_4_5_99">4.5(99)</string>
    <string name="inr_199">INR 199</string>
    <string name="description_about_the_product">Description about the product</string>
    <string name="product_1">Product 1</string>
    <string name="mind_body_you"><![CDATA[Mind Body & You]]></string>
    <string name="q_a_forum"><![CDATA[Q&A Forum]]></string>
    <string name="ask_questions_and_get_answers_from_experts">Ask questions and get answers from experts.</string>
    <string name="read"><u>Read</u></string>
    <string name="see_all">See all</string>
    <string name="we_have_been_published_on">We have been published on</string>
    <string name="articals">Articals</string>
    <string name="what_s_my_body_even_doing">What\'s My Body Even Doing?</string>
    <string name="your_body_type_or_prakriti_is_determined_by_the_dominant_dosha_or_your_genetics_there_are_seven_body_types_vata_pita_kapha">Your body type, or prakriti, is determined by the dominant dosha or your genetics. There are seven body types Vata, Pita, Kapha...</string>
    <string name="vata_pitta_kapha_huh">Vata, Pitta, Kapha... Huh?...</string>
    <string name="when_the_doshas_are_in_balance_the_body_and_mind_are_in_a_state_of_harmony_however_when_the_doshas_are_imbalanced_you_know">When the doshas are in balance, the body and mind are in a state of harmony. However, when the doshas are imbalanced... you know!</string>
    <string name="discussion">Discussion</string>
    <string name="_200_steps">200 Steps</string>
    <string name="behind_target">Behind Target</string>
    <string name="details">Details</string>
    <string name="workout">Workout</string>
    <string name="_30_mins">30 Mins</string>
    <string name="random_icon">random icon</string>
    <string name="_7_857">7,857</string>
    <string name="steps">Steps</string>
    <string name="_18_mins">18 Mins</string>
    <string name="mind">Mind</string>
    <string name="_20_agitated">20% Agitated</string>
    <string name="_15_mins">15 Mins</string>
    <string name="meditation_required">Meditation Required</string>
    <string name="nutrition">Nutrition</string>
    <string name="_960_kcal">960 kcal</string>
    <string name="_700_kcal">700 kcal</string>
    <string name="product_name">Product Name</string>
    <string name="_50_off">50% off</string>
    <string name="details_ndetails_ndetails">Details\ndetails\ndetails...</string>
    <string name="try_now">Try now</string>
    <string name="random_image">Random image</string>
    <string name="discover_how_mindfulness_can_improve_your_mental_health">Discover how mindfulness can improve your mental health.</string>
    <string name="_5_min_read">5 min read</string>
    <string name="cardio_workouts">Cardio Workouts</string>
    <string name="you_have_consumed_n960_kcal_today">You have consumed\n960 kcal today</string>
    <string name="add_meals">Add Meals</string>
    <string name="simple_dot">Simple Dot</string>
    <string name="fat">Fat</string>
    <string name="_80g">80g</string>
    <string name="protein">Protein</string>
    <string name="_160g">160g</string>
    <string name="_56">56%</string>
    <string name="carbs">Carbs</string>
    <string name="_230g">230g</string>
    <string name="_62">62%</string>
</resources>