<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginModule.LoginOrSignupFragment">


    <FrameLayout
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/some_text"
            android:scaleType="centerCrop"
            android:src="@drawable/selection" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:text="@string/dont_tell_anyone_about_us_keeping_your_fitness_journey_private_is_key"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp"

            />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="@drawable/profile_png_back"
        android:padding="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/user_icon"
            android:scaleType="centerInside"
            android:src="@drawable/user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurface" />
    </LinearLayout>

    <TextView
        android:id="@+id/your_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/anuphan_semibold"
        android:text="@string/login_signup"
        android:textColor="?attr/colorOnSurface"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginToContinue"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/login_to_continue"
        android:textSize="16sp"
        app:cornerRadius="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_text_id" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignupToContinue"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/first_timer_signup"
        android:textSize="16sp"
        app:cornerRadius="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginToContinue"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:paddingTop="4dp"
            android:paddingEnd="2dp"
            android:paddingBottom="4dp"
            android:text="@string/please_read"
            android:textColor="?attr/colorOnSurface"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/amaranth"
            android:paddingStart="2dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/terms_amp_condition"
            android:textColor="?attr/colorTertiary"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>