<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/back_button"
            android:src="@drawable/product"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anuphan_bold"
            android:gravity="start"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            android:maxLines="1"
            android:text="@string/product_1"
            android:layout_marginStart="4dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/subtitleText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:gravity="start"
                android:textColor="?attr/colorSurfaceInverse"
                android:textSize="14sp"
                android:text="@string/description_about_the_product"
                android:layout_marginStart="6dp"/>

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/add_to_cart"
                app:tint="?attr/colorSecondary"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:padding="4dp">
            <TextView
                android:id="@+id/txtRating"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:gravity="start"
                android:textColor="?attr/colorOnSurface"
                android:textSize="14sp"
                android:text="@string/_4_5_99"
                android:layout_marginStart="6dp"/>

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anuphan_bold"
                android:gravity="end"
                android:textColor="?attr/colorOnSurface"
                android:textSize="14sp"
                android:text="@string/inr_199"
                android:layout_marginStart="6dp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
